2010-12-27  Ryuan Choi  <ryuan.choi@samsung.com>

        Reviewed by David Levin.

        [EFL] Change path of eflsymbols.filter
        https://bugs.webkit.org/show_bug.cgi?id=51659

        * Sources/cmake/OptionsEfl.cmake: 

2010-12-26  Adam Barth  <abarth@webkit.org>

        Reviewed by Eric Siedel.

        Move autotools into Sources
        https://bugs.webkit.org/show_bug.cgi?id=51630

        * .gitignore:
        * GNUmakefile.am:
        * Sources/autotools: Copied from autotools.
        * autogen.sh:
        * autotools: Removed.
        * autotools/acinclude.m4: Removed.
        * autotools/dolt.m4: Removed.
        * autotools/gsettings.m4: Removed.
        * autotools/symbols.filter: Removed.
        * autotools/webkit.m4: Removed.
        * configure.ac:

2010-12-26  Adam Barth  <abarth@webkit.org>

        Reviewed by Eric Seidel.

        Move cmake into Sources
        https://bugs.webkit.org/show_bug.cgi?id=51631

        * CMakeLists.txt:
        * Sources/cmake: Copied from cmake.
        * cmake: Removed.
        * cmake/FindCFLite.cmake: Removed.
        * cmake/FindCairo.cmake: Removed.
        * cmake/FindEFL.cmake: Removed.
        * cmake/FindFontconfig.cmake: Removed.
        * cmake/FindFreetype.cmake: Removed.
        * cmake/FindGDK-PixBuf.cmake: Removed.
        * cmake/FindGDK.cmake: Removed.
        * cmake/FindGIO.cmake: Removed.
        * cmake/FindGStreamer-App.cmake: Removed.
        * cmake/FindGStreamer-Base.cmake: Removed.
        * cmake/FindGStreamer-Interfaces.cmake: Removed.
        * cmake/FindGStreamer-Pbutils.cmake: Removed.
        * cmake/FindGStreamer-Plugins-Base.cmake: Removed.
        * cmake/FindGStreamer-Video.cmake: Removed.
        * cmake/FindGStreamer.cmake: Removed.
        * cmake/FindGlib.cmake: Removed.
        * cmake/FindGperf.cmake: Removed.
        * cmake/FindGthread.cmake: Removed.
        * cmake/FindICU.cmake: Removed.
        * cmake/FindLibSoup2.cmake: Removed.