@@ -13,7 +13,7 @@ IF (WTF_OS_UNIX)
 ENDIF (WTF_OS_UNIX)
 
 IF (MSVC)
-    SET(CODE_GENERATOR_PREPROCESSOR "cl.exe /nologo /EP")
+    SET(CODE_GENERATOR_PREPROCESSOR "${CMAKE_CXX_COMPILER} /nologo /EP")
 ELSE ()
-    SET(CODE_GENERATOR_PREPROCESSOR "cpp")
+    SET(CODE_GENERATOR_PREPROCESSOR "${CMAKE_CXX_COMPILER} -E -P -x c++")
 ENDIF ()
