@@ -1,3 +1,12 @@
+2010-12-29  Patrick Gansterer  <paroga@webkit.org>
+
+        Reviewed by Andreas Kling.
+
+        [CMake] Remove WebKitGenerators
+        https://bugs.webkit.org/show_bug.cgi?id=50445
+
+        * CMakeLists.txt: Pass preprocessor to generate-bindings.pl.
+
 2010-12-28  Pratik Solanki  <psolanki@apple.com>
 
         Reviewed by Eric Seidel.
